<resources>
    <string name="app_name">Restaurant App</string>
    <string name="App_name">Restaurant App</string>
    <string name="Resto">RESTAURANT</string>
    <string name="Customer_button">Customer</string>
    <string name="signin_custo">Customer Signin</string>
    <string name="hint_custo">USERNAME</string>
    <string name="hint_custo_pass">PASSWORD</string>
    <string name="signin_custo_btn">SIGNIN</string>
    <string name="signup">new users signup</string>
    <string name="rest_signin_txt">Restaurant Signin</string>
    <string name="details">Enter your Details</string>
    <string name="name">Enter Your Name</string>
    <string name="phone">Phone number</string>
    <string name="sign">signup</string>
    <string name="Email">Email</string>
    <string name="Name">Restaurant Name</string>
    <string name="address">Restaurant Address</string>
    <string name="username">Username</string>
    <string name="select">Select options to veiw</string>
    <string name="add_menu">Add Menu</string>
    <string name="veiw_order">View Orders</string>
    <string name="veiw_parcel">View Parcels</string>
    <string name="dish_name">Dish name</string>
    <string name="dish_price">Dish Price</string>
    <string name="add">Add</string>
    <string name="select_restaurant">Select a Restaurant</string>
    <string name="select_option">Select a Option</string>
    <string name="veiw_menu">View Menu</string>
    <string name="order_parcel">Order Parcel</string>
    <string name="book_table">Book Table</string>
    <string name="menu">Menu</string>
    <string name="select_table">Select your table</string>
    <string name="select_t">Select your Table</string>
    <string name="or">--------------------OR--------------------</string>
    <string name="deletes">Delete Selected Item</string>
    <string name="update">Update</string>
    <string name="relese">Relese table</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
    <string name="count">0</string>
    <string name="bill">Bill</string>
    <string name="pay" />
    <string name="pay1">PAY</string>
    <string name="order_name">Name of Orderer</string>
    <string name="orders">Orders</string>
    <string name="done">Done</string>
</resources>
